--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,9 +35,14 @@ h1 {
   line-height: 1.1;
 }
 
+input{
+  padding: .2em;
+  font-size: 1em;
+}
+
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid #646cff;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
