--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,13 +36,15 @@ h1 {
 }
 
 input{
-  padding: .2em;
+  border-radius: 8px;
+  border: 1px solid black;
+  padding: 0.6em 1.2em;
   font-size: 1em;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid #646cff;
+  border: 1px solid forestgreen;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
